# real-time-style-transfer

./: .gitignore  Doxyfile  README.md  fashion_mnist.ipynb  shell.nix  valgrind-out.txt
.github/workflows/: build.yml  format.yml  lint.yml  test.yml
doc/: doc.md
docs/: initial_documentation.md
scripts/: create-cyclegan-pretrained.py  create_cyclegan_pretrained.py  requirements.txt  test.py
src/: .clang-format-ignore  .suppressions.txt  CMakeLists.txt  CMakePresets.json  main.cpp  vcpkg.json
src/common/: CMakeLists.txt  camera.cpp  image.cpp  manager.cpp  model.cpp  modelLoadingError.cpp  model_manager.cpp  utils.cpp
src/common/include/common/: camera.hpp  image.hpp  manager.hpp  model.hpp  modelLoadingError.hpp  model_manager.hpp  utils.hpp
src/model/: manager.cpp  manager.hpp
src/test/: CMakeLists.txt  test_utils.cpp
src/test/test-sanity/: test-sanity.cpp
src/ui/: CMakeLists.txt  application.cpp  application.hpp  downloader.cpp  main_window.cpp  main_window.hpp  resources.qrc  state.cpp  view.cpp
src/ui/components/: model_list_element.cpp
src/ui/include/ui/: application.hpp  downloader.hpp  main_window.hpp  state.hpp  view.hpp
src/ui/include/ui/components/: model_list_element.hpp
src/ui/include/ui/pages/: camera_page.hpp  epage.hpp  image_page.hpp  ipage.hpp  models_page.hpp  page.hpp  page_index.hpp
src/ui/pages/: camera_page.cpp  image_page.cpp  models_page.cpp  page.cpp
utils/: format-check.sh  lint-clang-tidy.sh  lint-cppcheck.sh  reformat.sh
